# chain_experiments

./: .dockerignore  Cargo.toml  README.md  goal.md  tarpaulin.toml
crates/tensor_vm/: Cargo.toml  README.md  build.rs
crates/tensor_vm/kernels/cuda/: field_matmul.cu
crates/tensor_vm/src/: api.rs  app.rs  chain.rs  challenge.rs  cli.rs  codec.rs  error.rs  explorer.rs  faucet.rs  field.rs  hash.rs  jobs.rs  lib.rs  localnet.rs  main.rs  main_tests.rs  merkle.rs  miner.rs  node.rs  oracle.rs  p2p.rs  profile.rs  record_fields.rs  roles.rs  rpc.rs  runtime.rs  scheduler.rs  storage.rs  study.rs  telemetry.rs  tensor.rs  tensor_server.rs  testnet.rs  txpool.rs  types.rs  validator.rs  verify.rs  vm.rs  watcher.rs
crates/tensor_vm/src/app/: block_status.rs  commands.rs  key_value_report.rs  local_cpu_verify.rs  local_testnet_seed.rs  miner_device_readiness.rs  miner_role.rs  network.rs  operator_checks.rs  operator_validation.rs  role_services.rs  runtime_config.rs  runtime_loop.rs  runtime_network.rs  runtime_production.rs  runtime_rpc.rs  runtime_services.rs  runtime_status.rs  runtime_status_snapshot.rs  runtime_validator.rs  service_runtime.rs  shared.rs  status.rs  tvmd_dispatch.rs  tvmd_node_dispatch.rs  tvmd_path.rs  validator_fetch.rs  validator_role.rs
crates/tensor_vm/src/chain/: accounts.rs  blocks.rs  challenges.rs  commands.rs  engine.rs  genesis.rs  models.rs  operators.rs  proposer.rs  receipts.rs  roots.rs  settlement.rs  state.rs  test_helpers.rs  tests.rs  transactions.rs  validation.rs
crates/tensor_vm/src/cli/: arguments.rs  command_values.rs  commands.rs  descriptions.rs  evidence_fields.rs  execution.rs  local_commands.rs  local_description_values.rs  local_descriptions.rs  local_execution.rs  local_execution_values.rs  local_fixture_reports.rs  local_node_commands.rs  local_p2p_report_fields.rs  local_parser.rs  local_role_commands.rs  local_role_descriptions.rs  local_role_execution.rs  local_role_parser.rs  local_runtime_args.rs  local_service_descriptions.rs  local_service_execution.rs  local_service_parser.rs  localnet_commands.rs  network_evidence.rs  node_evidence.rs  (+47 more)
crates/tensor_vm/tests/: local_cpu_compose.rs  tvmd_cli.rs  tvmd_runtime.rs
crates/tensor_vm_explorer/: Cargo.toml  README.md
crates/tensor_vm_explorer/src/: lib.rs  main.rs  ratzilla_main.rs  ratzilla_ui.rs
(+281 files in other folders)
