[package]
name = "tensor_vm"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tvmd"
path = "src/main.rs"

[features]
cuda-kernels = []

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
# Mandatory TensorVM runtime dependency. `default-features = false` only limits the
# upstream libp2p protocol surface; libp2p itself is not a TensorVM feature gate.
libp2p = { version = "0.54.1", default-features = false, features = ["dns", "ed25519", "gossipsub", "identify", "json", "kad", "macros", "request-response", "tcp", "tls", "tokio", "yamux"] }
serde = { version = "1", features = ["derive"] }
tensor_vm_explorer = { path = "../tensor_vm_explorer" }
tokio = { version = "1", features = ["net", "rt", "time"] }
