[package]
name = "tensor_vm_explorer"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tensorvm-explorer"
path = "src/main.rs"

[features]
default = ["ui"]
ui = ["ratzilla-ui"]
ratzilla-ui = ["dep:ratzilla"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratzilla = { version = "0.3.0", optional = true }

[[bin]]
name = "tensorvm-explorer-ratzilla"
path = "src/ratzilla_main.rs"
required-features = ["ratzilla-ui"]
